Bro, bingung bro

--- a/lapak/css/custom.css
+++ b/lapak/css/custom.css
@@ -1,1 +1,9 @@
 /* your styles go here */
+
+/*.box{
+	border: 1px solid black; 
+	height: 200px; 
+	width: 700px; 
+	margin: auto; 
+	text-align: center;
+}*/
